--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20" >
       <tr>
-      <td> <img src="C:\Users\DURGA sdvp\Desktop\course\web development\HTML-PERSONAL SITE\images\IMG_2433_edited.jpg" alt="my image"> </td>
+      <td> <img src="IMG_2433_edited.jpg" alt="my image"> </td>
       <td><h1>darling DP</h1></td>
       </tr>
     </table>
